--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "webpack-boilerplate",
+  "name": "monkey-bar",
   "version": "1.0.0",
-  "description": "Webpack 4 Boilerplate",
+  "description": "<monkey-bar> is a lit-element component displaying a progress-bar.",
   "engines": {
     "node": "10.x.x",
     "npm": "6.x.x"
   },
-  "main": "index.js",
+  "main": "lib/",
+  "module": "esm/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:stefanfrede/webpack-boilerplate.git"
+    "url": "git@github.com:stefanfrede/monkey-bar.git"
   },
   "keywords": [
-    "webpack",
-    "webpack 4",
-    "webpack boilerplate",
-    "boilerplate"
+    "web components",
+    "progress bar",
+    "lit-element",
+    "lit-html"
   ],
   "author": {
     "name": "Stefan Frede",
@@ -23,9 +24,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stefanfrede/webpack-boilerplate/issues"
+    "url": "https://github.com/stefanfrede/monkey-bar/issues"
   },
-  "homepage": "https://github.com/stefanfrede/webpack-boilerplate",
+  "homepage": "https://stefanfrede.github.io/monkey-bar/",
   "browserslist": [
     "last 2 Chrome major versions",
     "last 2 ChromeAndroid major versions",
@@ -50,18 +51,14 @@
   },
   "sideEffects": false,
   "scripts": {
-    "test": "if-ci npm run test:coverage && if-not-ci npm run test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test:e2e": "if-ci npm run test:e2e:run && if-not-ci npm run test:e2e:dev",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "start-server-and-test start http://localhost:8080 cy:run",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:8080 cy:open",
-    "build": "webpack --env production",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:dist && npm run build:esm && npm run build:cjs",
+    "build:dist": "webpack --env production",
+    "build:esm": "babel --delete-dir-on-start -d esm/ src/",
+    "build:cjs": "babel --delete-dir-on-start --env-name cjs -d lib/ src/",
     "build:stats": "webpack --env production --json > stats.json",
+    "preversion": "npm test",
+    "prepublishOnly": "npm run lint && npm run build",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --host 0.0.0.0 --env development\"",
     "start:build": "serve --no-clipboard --listen 8080 dist",
     "deploy": "gh-pages -d dist",
@@ -73,7 +70,7 @@
     "format:eslint": "eslint --ext src/**/*.js,.html src/ --fix",
     "format:prettier": "prettier \"src/**/*.js\" --write",
     "format:stylelint": "stylelint src/**/*.js src/**/*.html src/**/*.css src/**/*.scss --fix",
-    "validate": "npm run build && npm run lint && npm run test:coverage",
+    "validate": "npm run build && npm run lint",
     "setup": "npm install && npm run validate"
   },
   "devDependencies": {
@@ -81,32 +78,31 @@
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@testing-library/cypress": "^5.0.2",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-bundled-import-meta": "^0.3.1",
     "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-template-html-minifier": "^3.1.0",
     "browserslist": "^4.7.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "cypress": "^3.4.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-chai-friendly": "^0.5.0",
-    "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-lit": "^1.2.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-wc": "^1.2.0",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^2.1.1",
@@ -115,9 +111,6 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "husky": "^3.0.9",
-    "if-ci": "^3.0.0",
-    "jest": "^24.9.0",
-    "jest-watch-typeahead": "^0.4.0",
     "lint-staged": "^9.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.4",
@@ -130,7 +123,6 @@
     "purifycss-webpack": "^0.7.0",
     "sass-loader": "^8.0.0",
     "serve": "^11.2.0",
-    "start-server-and-test": "^1.10.6",
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
     "stylelint-config-prettier": "^6.0.0",
