--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "monkey-bar",
   "version": "1.0.0-alpha1",
-  "description": "<monkey-bar> is a lit-element component displaying a progress-bar.",
+  "description": "Progress element built with lit-element based on Bootstrap 4",
   "engines": {
     "node": "10.x.x",
     "npm": "6.x.x"
   },
-  "main": "lib/",
-  "module": "esm/",
+  "main": "dist/monkey-bar.js",
+  "module": "dist/monkey-bar.js",
+  "files": [
+    "dist/*.*js",
+    "dist/*.*js.LICENSE",
+    "dist/*.*js.map"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:stefanfrede/monkey-bar.git"
   },
   "keywords": [
-    "web components",
-    "progress bar",
-    "lit-element",
-    "lit-html"
+    "progress",
+    "progress-bar",
+    "web-component",
+    "lit-element"
   ],
   "author": {
     "name": "Stefan Frede",
@@ -26,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/stefanfrede/monkey-bar/issues"
   },
-  "homepage": "https://stefanfrede.github.io/monkey-bar/",
+  "homepage": "https://github.com/stefanfrede/monkey-bar",
   "browserslist": [
     "last 2 Chrome major versions",
     "last 2 ChromeAndroid major versions",
@@ -52,10 +57,7 @@
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "npm run build:dist && npm run build:esm && npm run build:cjs",
-    "build:dist": "webpack --env production",
-    "build:esm": "babel --delete-dir-on-start -d esm/ src/",
-    "build:cjs": "babel --delete-dir-on-start --env-name cjs -d lib/ src/",
+    "build": "webpack --env production",
     "build:stats": "webpack --env production --json > stats.json",
     "preversion": "npm test",
     "prepublishOnly": "npm run lint && npm run build",
@@ -71,7 +73,8 @@
     "format:prettier": "prettier \"src/**/*.js\" --write",
     "format:stylelint": "stylelint src/**/*.js src/**/*.html src/**/*.css src/**/*.scss --fix",
     "validate": "npm run build && npm run lint",
-    "setup": "npm install && npm run validate"
+    "setup": "npm install && npm run validate",
+    "release": "standard-version --sign"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -123,6 +126,7 @@
     "purifycss-webpack": "^0.7.0",
     "sass-loader": "^8.0.0",
     "serve": "^11.2.0",
+    "standard-version": "^7.0.0",
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
     "stylelint-config-prettier": "^6.0.0",
