--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "node": "10.x.x",
     "npm": "6.x.x"
   },
-  "main": "monkey-bar.js",
-  "module": "monkey-bar.js",
+  "main": "lib/",
+  "module": "esm/",
   "files": [
+    "lib",
     "dist/*.*.js",
     "dist/*.*.js.LICENSE",
-    "dist/*.*.js.map"
+    "dist/*.*.js.map",
+    "esm"
   ],
   "repository": {
     "type": "git",
@@ -57,7 +59,10 @@
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "webpack --env production",
+    "build": "npm run build:cjs && npm run build:dist && npm run build:esm",
+    "build:cjs": "babel --delete-dir-on-start --env-name cjs -d lib/ src/",
+    "build:dist": "webpack --env production",
+    "build:esm": "babel --delete-dir-on-start -d esm/ src/",
     "build:stats": "webpack --env production --json > stats.json",
     "preversion": "npm test",
     "prepublishOnly": "npm run lint && npm run build",
